# expirement_system

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  test_xds_integration.sh
configs/: xds_example.yaml
configs/experiments/: 2000.json  2001.json  2002.json  2003.json  3000.json  3001.json  3002.json
configs/layers/: ranker_experiment.json  recommendation_experiment.json
control_plane/: CHANGELOG_DESIGN.md  DESIGN.md  Makefile  README.md  config.yaml  go.mod  go.sum
control_plane/cmd/server/: main.go
control_plane/internal/config/: config.go  manager.go
control_plane/internal/grpc_server/: push_server.go
control_plane/internal/handler/: layer_handler.go
control_plane/internal/models/: models.go
control_plane/internal/repository/: changelog_repository.go  experiment_repository.go  layer_repository.go  postgres_repo.go  repository.go
control_plane/internal/state/: config_state.go
control_plane/internal/sync/: poller.go
control_plane/migrations/: 001_init.sql  002_aksk_auth.sql  003_explicit_changelog.sql
control_plane/pkg/auth/: aksk.go
control_plane/pkg/oidc/: provider.go
control_plane/proto/: config_push.proto
data_plane/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
data_plane/benches/: layer_management_bench.rs  merge_benchmark.rs  param_merge_bench.rs  rule_evaluation_bench.rs
data_plane/configs/layers/: premium_feature_rollout.json  regional_experiment.json  us_adult_experiment.json
data_plane/src/: catalog.rs  config.rs  error.rs  hash.rs  layer.rs  lib.rs  main.rs  merge.rs  metrics.rs  rule.rs  server.rs  watcher.rs  xds_client.rs
data_plane/src/config/: mod.rs  sources.rs  types.rs  watcher.rs
data_plane/src/engine/: catalog.rs  hash.rs  layer.rs  merge.rs  mod.rs  rule.rs
data_plane/src/server/: grpc.rs  http.rs  mod.rs
data_plane/src/utils/: error.rs  metrics.rs  mod.rs
data_plane/tests/: integration_test.rs  rule_integration_test.rs  salt_test.rs
proto/: config_push.proto  example_client.go  experiment.proto  xds_types.proto
scripts/: load_test.sh  test_api.sh
tests/: integration.sh  performance.sh  unit.sh
