[package]
name = "experiment-data-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework & async runtime
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File watching
notify = "6.1"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"

# gRPC (optional)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Atomic operations
parking_lot = "0.12"
arc-swap = "1.6"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[features]
default = ["http"]
http = []
grpc = ["tonic", "prost"]

[[bench]]
name = "layer_management_bench"
harness = false

[[bench]]
name = "rule_evaluation_bench"
harness = false

[[bench]]
name = "param_merge_bench"
harness = false
