[package]
name = "experiment-data-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework & async runtime
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File watching
notify = "6.1"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"

# gRPC and xDS
tonic = { version = "0.11", optional = true }
tonic-health = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Atomic operations
parking_lot = "0.12"
arc-swap = "1.6"

# Async trait
async-trait = "0.1"

# UUID for node ID generation
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.11", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[features]
default = ["grpc"]
http = []
grpc = ["tonic", "tonic-health", "prost", "tonic-build", "tokio-stream"]

[[bench]]
name = "layer_management_bench"
harness = false

[[bench]]
name = "rule_evaluation_bench"
harness = false

[[bench]]
name = "param_merge_bench"
harness = false
